edit swagger-file
