# docs/swagger.yaml
@@ -82,21 +82,11 @@ definitions:
       updatedAt:
         type: string
     type: object
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
-host: localhost:8001
+host: localhost:8000
 info:
   contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server celler server.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
+    name: Bui Phu An
+  title: Golang Project
   version: "1.0"
 paths:
   /auth/register:
